--- a/public/templates/sigup-success.html
+++ b/public/templates/sigup-success.html
@@ -59,52 +59,13 @@
             </header>
 <!--end header-->
 
-  <div class="account-wrapper">
+ <div class="account-wrapper">
         <div class="account-body">
-            <h3>Welcome to 360notion™.</h3>
-            <h5>Please sign in.</h5>
-
-            <form id="login_form" action="/login" method="POST" class="form account-form" role="form">
-               
-               
-                <fieldset>
-                    <div class="form-group">
-                        <label for="email" class="placeholder-hidden">Email</label>
-                        <input type="text"
-                            class="form-control validate[required,custom[email]]"
-                            id="email"
-                            name="email"
-                            placeholder="Email">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="password" class="placeholder-hidden">Password</label>
-                        <input type="password"
-                            class="form-control validate[required,minSize[6],maxSize[32]]"
-                            id="password"
-                            name="password"
-                            placeholder="Password">
-                    </div>
-
-                    <div class="form-group text-center">
-                        <button type="submit" class="btn btn-primary sign-in">
-                            Sign In &nbsp; 
-                        </button>
-                    </div>
-
-                    <div class="form-group clearfix">
-                        <div class=" text-center">
-                            <small><a href="/forgot">Forgot Password?</a></small>
-                        </div>
-                    </div>
-              </fieldset>
-            </form>
-        </div>
-
-        <div class="account-footer">
+            <h1><i class="fa fa-check"></i> Sign up successful</h1>
             <p>
-                Don't have an account? &nbsp;
-                <a href="/signup">Create an Account!</a>
+                Please confirm your identity through the email we sent you
+                <br>or<br>
+                <a href="/" class="home-link">Go back to our Home Page</a>
             </p>
         </div>
     </div>
