--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -59,22 +59,38 @@
             </header>
 <!--end header-->
 
-  <div class="account-wrapper">
+   <div class="account-wrapper">
         <div class="account-body">
-            <h3>Welcome to 360notion™.</h3>
-            <h5>Please sign in.</h5>
+            <h3>Get Started with a Free Account.</h3>
+            <h5>Sign up in 30 seconds. No credit card required.</h5>
 
-            <form id="login_form" action="/login" method="POST" class="form account-form" role="form">
-               
-               
+            <form id="signup_form" action="/signup" method="POST" class="form account-form" role="form">
                 <fieldset>
                     <div class="form-group">
-                        <label for="email" class="placeholder-hidden">Email</label>
+                        <label for="name" class="placeholder-hidden">Company Name</label>
                         <input type="text"
+                            class="form-control validate[required]"
+                            id="organization"
+                            name="organization"
+                            placeholder="Company Name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email" class="placeholder-hidden">Email</label>
+                        <input type="email"
                             class="form-control validate[required,custom[email]]"
                             id="email"
                             name="email"
-                            placeholder="Email">
+                            placeholder="Company Email Address">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="name" class="placeholder-hidden">Full Name</label>
+                        <input type="text"
+                            class="form-control validate[required]"
+                            id="name"
+                            name="name"
+                            placeholder="Full Name">
                     </div>
 
                     <div class="form-group">
@@ -86,25 +102,28 @@
                             placeholder="Password">
                     </div>
 
-                    <div class="form-group text-center">
-                        <button type="submit" class="btn btn-primary sign-in">
-                            Sign In &nbsp; 
-                        </button>
+                    <div class="form-group">
+                        <label for="confirm_password" class="placeholder-hidden">Confirm Password</label>
+                        <input type="password"
+                            class="form-control validate[required,equals[password]]"
+                            id="confirm_password"
+                            name="confirm_password"
+                            placeholder="Confirm Password">
                     </div>
 
-                    <div class="form-group clearfix">
-                        <div class=" text-center">
-                            <small><a href="/forgot">Forgot Password?</a></small>
-                        </div>
+                    <div class="form-group text-center">
+                        <button type="submit" class="btn btn-primary">
+                            Create My Account &nbsp; 
+                        </button>
                     </div>
-              </fieldset>
+                </fieldset>
             </form>
         </div>
 
         <div class="account-footer">
             <p>
-                Don't have an account? &nbsp;
-                <a href="/signup">Create an Account!</a>
+                Already have an account? &nbsp;
+                <a href="/login" class="">Log In to your Account!</a>
             </p>
         </div>
     </div>
